--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,10 +56,18 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">29 April 2018</h2>
+			<h3 class="author">Обновление от bear1ake:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлена возможность прозвонить (то бишь, порты) генератор щитов, SMES, хранилище скафандров и холодильник (smartfridge).</li>
+				<li class="bugfix">Исправлены порты к автоматам (vending).</li>
+				<li class="rscdel">Гуночат удален до лучших времен.</li>
+			</ul>
+
 			<h2 class="date">24 April 2018</h2>
 			<h3 class="author">Обновление от Bear1ake:</h3>
 			<ul class="changes bgimages16">
-				<li class="rscadd">Добавлен (гуночат). Вы можете вернуть старый, если нажмёте кнопку "Fix Chat".</li>
+				<li class="rscadd">Старый чат удалён, на его место пришел новый (гуночат).</li>
 				<li class="wip">Потенциально пофикшены вылеты из-за нового чата.</li>
 			</ul>
 			<h3 class="author">Обновление от S.konoplich:</h3>
