--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,11 @@
 		-->
 		<div class="commit sansserif">
 			<h2 class="date">29 April 2018</h2>
+			<h3 class="author">Обновление от Liners:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлено следующее стрелковое оружие: M60, M14, M16, BP-15 PDW. А также боеприпасы к ним.</li>
+				<li class="rscadd">Добавлена возможность примыкать/отмыкать прицелы и сами прицелы. Пока только для M14.</li>
+			</ul>
 			<h3 class="author">Обновление от bear1ake:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">Добавлена возможность прозвонить (то бишь, порты) генератор щитов, SMES, хранилище скафандров и холодильник (smartfridge).</li>
