--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,30 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">02 May 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В аварийный арсенал добавлены баллистические щиты.</li>
+				<li class="tweak">В обоих арсеналах обычные еганы заменены на еганы с замком.</li>
+				<li class="tweak">В аварийном арсенале лазеры заменены на лазеры с замком.</li>
+				<li class="tweak">Повышена общая надежность двигателей в ущерб удельной мощности.</li>
+				<li class="maptweak">Обновлены декали в корридорах и бриге - в основном, пропавшие уголки рядом с противопожарными ставнями.</li>
+				<li class="maptweak">Офис Офицера Гаупвахты изменён.</li>
+				<li class="maptweak">Изменен принцип размещения труб для подачи кислорода в реактивных двигателях.</li>
+				<li class="bugfix">Первый и второй реактивные двигатели снова могут быть запущены - азот удален из труб.</li>
+				<li class="bugfix">В шкафы следователей возвращены чемоданчики с наборами для расследования преступлений.</li>
+				<li class="wip">Изменены и дополнены богани.</li>
+				<li class="rscadd">Добавлен баллон с хлором и спрайт на теле для туники богани.</li>
+				<li class="tweak">Оружие богани перебалансировано. Добавлен режим оглушения для захвата экипажа.</li>
+				<li class="tweak">Зрение в темноте соответствует зрению таяр.</li>
+				<li class="rscdel">Характеристики богани перебалансированы - уменьшено сопротивление к огню и ушибам, добавлена природная броня (в итоге нерф).</li>
+				<li class="wip">Характеристики ксенофагов изменены.</li>
+				<li class="tweak">Кровь больше не является невосстановимым ресурсом - при лежании на траве, кровь быстро восстанавливается.</li>
+				<li class="tweak">Сокращено необходимое время для взросления личинки.</li>
+				<li class="tweak">Все панцири чёрного цвета. Осталось различие по глазам.</li>
+				<li class="rscdel">Снижена скорость и сопротивление урону. Части тела могут получить перелом (но всё ещё нельзя гибнуть).</li>
+			</ul>
+
 			<h2 class="date">29 April 2018</h2>
 			<h3 class="author">Обновление от Liners:</h3>
 			<ul class="changes bgimages16">
