Игроки для режимов, конфиги. +13 записей в чейнджлог.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -78,6 +78,19 @@
 				<li class="tweak">Сокращено необходимое время для взросления личинки.</li>
 				<li class="tweak">Все панцири чёрного цвета. Осталось различие по глазам.</li>
 				<li class="rscdel">Снижена скорость и сопротивление урону. Части тела могут получить перелом (но всё ещё нельзя гибнуть).</li>
+				<li class="wip">Изменены конфиги выбора случайного режима для secret и random. [Название] ([Шанс старый] -> [Шанс новый), [минимальное количество] игроков. С зелёной стрелочкой - добавлены. С инструментами - изменены.</li>
+				<li class="tweak">Трейтор (5 -> 4), 1 игрок.</li>
+				<li class="tweak">Генокрад (5 -> 4), 2 игрока</li>
+				<li class="tweak">Генокрад + Трейтор (4 -> 3), 12 игроков.</li>
+				<li class="tweak">Маг (2), 1 игрок.</li>
+				<li class="tweak">Малф (1), 5 игроков.</li>
+				<li class="tweak">Нюка (2 -> 3), 15 игроков.</li>
+				<li class="tweak">Культ (1 -> 2), 15 игроков.</li>
+				<li class="tweak">Налётчики (1 -> 2), 15 игроков.</li>
+				<li class="rscadd">Ниндзя + Трейтор (2), 12 игроков.</li>
+				<li class="rscadd">Маг + Генокрад (1), 12 игроков.</li>
+				<li class="rscadd">Маг + Ниндзя (1), 12 игроков.</li>
+				<li class="rscadd">Налётчики + Нюка (0 -> 1), 25 игроков.</li>
 			</ul>
 
 			<h2 class="date">29 April 2018</h2>
