--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,15 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">04 May 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлена группа камер с Петрова.</li>
+				<li class="tweak">Изменено название кнопок во вкладках у ИИ и некоторых машин в целях упрощения нахождения.</li>
+				<li class="tweak">Если не выбран ни один из режимов - выставляется secret, а не экста.</li>
+				<li class="bugfix">ИИ пофикшен - малф снова выставляем в меню выбора шанса стать антагонистом.</li>
+			</ul>
+
 			<h2 class="date">02 May 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
