Декор в медбей + чейнджлог.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,21 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">08 May 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Последний Аргумент капитана добавлен в его офис.</li>
+				<li class="rscadd">Добавлена иконка для программы по сжатию мусора. Спасибо Courierr.</li>
+				<li class="tweak">Добавлена возможность разблокировать витрину (на данный момент, единственная расположена в каюту местного вождя) без ломания - проведите картой и нажмите по витрине. Предмет также можно положить обратно, если витрина разблокирована.</li>
+				<li class="tweak">Ресурсы, 100%-но появляющееся оружие и автолат перенесены на шаттл. Также, теперь там могут появиться медикаменты.</li>
+				<li class="spellcheck">В кабину шаттла торговцев добавлено рукотворное руководство для самых маленьких. Рекомендуется к прочтению ПЕРЕД общением с экипажем и запросом на стыковку.</li>
+				<li class="maptweak">На четвертую палубу возвращены два дока напротив лестницы. Эскадрон смерти и маловажные особые персонажи снова могут прибыть более-менее логичным образом.</li>
+				<li class="maptweak">Генератор щита и заброшенная комната мониторинга четвертой палубы перенесены в технические помещения с правого борта (рядом со складом экспедиционников). Временно удалена столовая офицеров.</li>
+				<li class="maptweak">Добавлена лестница в закуток между столовой и голодеком - ведёт на четвертую палубу, в теха по правому борту.</li>
+				<li class="rscdel">Уменьшен шанс появления трейторов и генокрадов.</li>
+				<li class="rscdel">Уменьшаем нагрузку - на овермапе помимо стандартного астероида для добычи ресурсов будет появляться лишь один особый объект и одна экзопланета. Более одной, обычно, и не исследуется.</li>
+			</ul>
+
 			<h2 class="date">04 May 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
