--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,22 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">09 May 2018</h2>
+			<h3 class="author">Обновление от KuzyXD ft. bear1ake:</h3>
+			<ul class="changes bgimages16">
+				<li class="soundadd">Звук для грилля добавлен.</li>
+				<li class="bugfix">Настенный флешер теперь не слепит ИИ.</li>
+				<li class="bugfix">Переработали интерфейс микроволновки (ничего нового, фиксы).</li>
+				<li class="bugfix">Фикс в создании шашлыка (один стержень без стака в микроволновку не засовывался).</li>
+				<li class="bugfix">Починили борера. Теперь его нахождение в голове человека зависит от брейндамага его жертвы.</li>
+				<li class="bugfix">Исправлены некоторые ошибки работы билда с базой данных SQL.</li>
+			</ul>
+			<h3 class="author">Обновление от SolarK & S-Konoplich:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлен второй экземпляр ивентного оружия. Использование его на постоянной основе будет решаться потом.</li>
+				<li class="bugfix">Исправлен спрайт карабина с регистрацией в руке.</li>
+			</ul>
+
 			<h2 class="date">08 May 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
