--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,14 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">11 May 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Параобъект 'Бесконечная Мусорка' устранен. Трубы между офисом представителей и РД больше не задерживают объекты.</li>
+				<li class="bugfix">Телепорт на четвертой палубе снова должен видеть консоль.</li>
+				<li class="maptweak">Система сброса мартышек из ксенобиологии улучшена.</li>
+			</ul>
+
 			<h2 class="date">09 May 2018</h2>
 			<h3 class="author">Обновление от KuzyXD ft. bear1ake:</h3>
 			<ul class="changes bgimages16">
