Карты - чейнджлог. В на картах, в основном, обновлены декали пола. В некоторые открытые секции технических помещений добавлены шлюзы и ящики.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,23 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">12 May 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В шкафчик хирургов добавлена разгрузка.</li>
+				<li class="tweak">Маски воксов больше не позволяют есть, однако, защищают от слезоточивого газа.</li>
+				<li class="tweak">Цены на лодаут воксов изменены - маска стоит 2, перчатки стоят 4. Одежда ничего не стоит.</li>
+				<li class="bugfix">Воск можно стакать до 60 слитков в пачке.</li>
+				<li class="bugfix">Офицерская форма резоми снова спавнится как положено.</li>
+				<li class="wip">Полноценно добавлен переносной барьер.</li>
+				<li class="tweak">Изначально, барьер находится в сложенном положении. Для развертывания, требуется взять барьер в руку и кликнуть по нему.</li>
+				<li class="tweak">Развернутый барьер мобилен и может быть использован в качестве 'калитки' - опускается и поднимается по клику.</li>
+				<li class="tweak">В поднятом положении при нажатии отверткой происходит полноценное развертывание - выдвигаются дополнительные защитные экраны. Повышается шанс задержать летящий сняряд, но барьер нельзя опустить.</li>
+				<li class="tweak">Для свертывания барьер требуется: 1) Опустить барьер. 2) Нажать монтировкой.</li>
+				<li class="tweak">При получении повреждений барьером может быть проведён ремонт. Ремонтируется сваркой (в том числе и в переносном состоянии).</li>
+				<li class="tweak">С начала смены, барьеры можно найти в обоих оружейных и на мостике в шкафчике с оружием. Можно дозаказать в карго при повышенном коде.</li>
+			</ul>
+
 			<h2 class="date">11 May 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
