--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">15 May 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscdel">Из практических соображений, резоми больше не могут занимать должности наемников из РНД и каптенармусов.</li>
+			</ul>
+
 			<h2 class="date">12 May 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
