--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -60,6 +60,10 @@
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscdel">Из практических соображений, резоми больше не могут занимать должности наемников из РНД и каптенармусов.</li>
+				<li class="tweak">Продвинутые технологии воксов снова позволяют им есть через маски.</li>
+				<li class="maptweak">Кнопка на входе в Калипсо снова может быть нажата извне.</li>
+				<li class="bugfix">Витрину с револьвером капитана снова можно сломать в случае отсутствия доступа. К слову, на витрите появилось требование на доступ капитана.</li>
+				<li class="bugfix">Одежда мага скрывает надетые на персонажа вещи и приметные особенности внешности. Розовые волосы и кошачий хвост больше не торчат из-под брони боевого мага.</li>
 			</ul>
 
 			<h2 class="date">12 May 2018</h2>
