Исправление ссылок на новый домен.

--- a/config/info/stories.html
+++ b/config/info/stories.html
@@ -1,5 +1,5 @@
 <html><body>
-История мира находится в процессе активного перевода. Переведена большая часть статей и вы можете ознакомиться с каждой <a href="https://wiki.infinity-ss13.ru/index.php?title=Baystation12-Лор">перейдя на вики сервере.</a><br>
+История мира находится в процессе активного перевода. Переведена большая часть статей и вы можете ознакомиться с каждой <a href="https://wiki.infinity-ss13.info/index.php?title=Baystation12-Лор">перейдя на вики сервере.</a><br>
 <br><br>
 Для ознакомления с оригинальным лором вы можете прочитать <a href="https://baystation12.net/lore/Home">прочитать статьи на английском.</a><br> Наш перевод от него отличается только адаптацией под русский язык:<br>
 
