--- a/config/info/welcome.html
+++ b/config/info/welcome.html
@@ -23,8 +23,8 @@
 <span class="main"><h1>Добро пожаловать на Infinity</h1>
 Используется стандартный билд BayStation12 с небольшими модификациями.<br>
 <br>
-<a href=" https://infinity-ss13.ru">Форум сервера</a><br>
-<a href=" https://infinity-ss13.ru/index.php?/topic/768-правила-игры-на-сервере/">Правила сервера</a><br>
+<a href=" https://infinity-ss13.info">Форум сервера</a><br>
+<a href=" https://infinity-ss13.info/index.php?/topic/768-правила-игры-на-сервере/">Правила сервера</a><br>
 <a href=" https://wiki.baystation12.net/">Вики BayStation12</a><br>
 <a href=" http://gg.gg/Infinity_LOGS">Логи сервера</a><br>
 <a href=" https://github.com/infinitystation">Код сервера</a><br>
