--- a/config/rules.html
+++ b/config/rules.html
@@ -21,7 +21,7 @@
 <body>
 <h3>Правила сервера</h3>
 <br>
-<strong>Внимание!</strong> В данном разделе даны лишь названия правил. Для полного ознакомления пройдите по ссылке: <a href="https://infinity-ss13.ru/index.php?/topic/768-правила-игры-на-сервере/" target="_blank">соответствующий раздел на форуме.</a><br><br>
+<strong>Внимание!</strong> В данном разделе даны лишь названия правил. Для полного ознакомления пройдите по ссылке: <a href="https://infinity-ss13.info/index.php?/topic/768-правила-игры-на-сервере/" target="_blank">соответствующий раздел на форуме.</a><br><br>
 <strong><h2><span style="color: #ff0000;">Сервер </span></h2></strong><br>
 
 <strong><span style="color: #ff0000;">Самое основное </span></strong><br>
