--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,32 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">25 May 2018</h2>
+			<h3 class="author">Обновление от S-konoplich:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлена кнопка Show Skills для администраторов.</li>
+			</ul>
+			<h3 class="author">Обновление от SolarK:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Хирургу выдан доступ в отсек ВКД.</li>
+				<li class="rscadd">У ПИИ появилось больше эмоций - а именно синтетические ping, buzz, confirm, deny. Say Help*, в общем.</li>
+				<li class="tweak">Недостаток кислорода больше не блокирует возможность говорить.</li>
+				<li class="tweak">Автохисс улучшен - теперь и большие буквы учавствуют в автохиссе. Не злоупотребляйте капсом.</li>
+				<li class="tweak">Возвращен спрайт для коробки с мышеловками.</li>
+				<li class="bugfix">Потенциально пофикшен дюп материалов.</li>
+				<li class="bugfix">Пофикшена проводка АПЦ.</li>
+				<li class="bugfix">Потенциально пофикшена форма младшего офицера полиции.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Стены разукрашены под цвет пола.</li>
+				<li class="maptweak">Пофикшено направление консолей на наших away-картах и у токамака.</li>
+				<li class="tweak">Изменено время появления дронов - если точнее, то перезарядка фабрикаторов продлена с 2 до 15 минут.</li>
+				<li class="tweak">Сила полотенца снижена до минимума.</li>
+				<li class="bugfix">Потенциально пофикшено ломание раздатчика одежды через ПДА.</li>
+				<li class="experiment">Терминатор стал сильнее - повышена сопротивляемость к ЕМП.</li>
+			</ul>
+
 			<h2 class="date">19 May 2018</h2>
 			<h3 class="author">Обновление от Terror4000rus:</h3>
 			<ul class="changes bgimages16">
