--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -57,6 +57,10 @@
 		-->
 		<div class="commit sansserif">
 			<h2 class="date">25 May 2018</h2>
+			<h3 class="author">Обновление от KropikKropik:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Изменён спрайт генной пушки.</li>
+			</ul>
 			<h3 class="author">Обновление от S-konoplich:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">Добавлена кнопка Show Skills для администраторов.</li>
