--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,13 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">09 June 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Временно (до 10:00, 10.06.2018) возвращены старые спрайты унатхов. Ссылка на голосование находится в новостном канале дискорда.</li>
+				<li class="rscdel">Старые спрайты обогатились в наборе причесок. Наслаждайтесь.</li>
+			</ul>
+
 			<h2 class="date">25 May 2018</h2>
 			<h3 class="author">Обновление от KropikKropik:</h3>
 			<ul class="changes bgimages16">
