--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,42 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">13 June 2018</h2>
+			<h3 class="author">Обновление от Bear1ake:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Переход на внешнюю библиотеку обработки json-текста, что позволяет ускорить загрузку интерфейсов на базе NanoUI и tgui, а также незначительно разгрузить сервер.</li>
+			</ul>
+			<h3 class="author">Обновление от KropikKropik:</h3>
+			<ul class="changes bgimages16">
+				<li class="imageadd">Новый спрайт для медовыжималки.</li>
+			</ul>
+			<h3 class="author">Обновление от Liners:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Настенные шкафчики больше не слезают со стен..</li>
+			</ul>
+			<h3 class="author">Обновление от S.Konoplich:</h3>
+			<ul class="changes bgimages16">
+				<li class="imageadd">Обновлён спрайт портативного проигрывателя.</li>
+				<li class="tweak">Теперь гитары можно вешать на спину.</li>
+			</ul>
+			<h3 class="author">Обновление от SolarK:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Следователям добавлены коробки с уликами, латексными перчатками и респиратор.</li>
+				<li class="tweak">Подправлен спрайт халата ИПК.</li>
+				<li class="tweak">Подправлены спрайты некоторых маркировок у таяр.</li>
+				<li class="tweak">Пальто детектива в лодауте больше не дает защиту.</li>
+				<li class="bugfix">Пофикшено отсутствие нутриментов в кусочках еды генерируемых с начала раунда.</li>
+				<li class="bugfix">Исправлены баги с кнопкой Show Skills.</li>
+				<li class="rscdel">Альтернативный ранг E9 убран из возможности выбора по лоровым причинам.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Генокрады при поглащении копируют и автоматически перенимают флавор жертвы при превращении.</li>
+				<li class="tweak">Ноты гитары обновлены. Удалены отсутствующие, добавлены отсутствовавшие. Также, повышено количество строк с 200 до 300.</li>
+				<li class="bugfix">Исправлен баг с двумя батарейками у ИПК.</li>
+				<li class="experiment">Блоб больше не может расти в open space.</li>
+			</ul>
+
 			<h2 class="date">25 May 2018</h2>
 			<h3 class="author">Обновление от KropikKropik:</h3>
 			<ul class="changes bgimages16">
