Переделываем казарму в общежитие.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -90,6 +90,7 @@
 				<li class="tweak">Ноты гитары обновлены. Удалены отсутствующие, добавлены отсутствовавшие. Также, повышено количество строк с 200 до 300.</li>
 				<li class="bugfix">Исправлен баг с двумя батарейками у ИПК.</li>
 				<li class="experiment">Блоб больше не может расти в open space.</li>
+				<li class="maptweak">После очередного десятка жалоб от пассажиров на качество сна в криокапсулах и барраке, капитан всё же пошел на уступки и военные бараки были переделаны в гражданский вариант общежития.</li>
 			</ul>
 
 			<h2 class="date">25 May 2018</h2>
