--- a/config/rules.html
+++ b/config/rules.html
@@ -84,14 +84,16 @@
 <strong><span style="color: #ff0000;">Минимальный возраст </span></strong><br>
 
 <table border=1>
-<tr height=30><td> РД, представитель НТ и представитель ПСС должны обладать минимальным возрастом в 30 лет.</td>
-<tr height=30><td> Военные и Экспедиционный Корпус обладают собственной системой рангов. Возраст персонажа должен быть не ниже указанной планки.</td>
+<tr height=30><td> РД, представители НТ и ПСС должны обладать минимальным возрастом в 30 лет.</td>
+<tr height=30><td> Флот и Экспедиционный Корпус обладают собственной системой рангов. Возраст персонажа должен быть не ниже указанной планки.</td>
 
 </table>
 
 <table border=1>
 <tr><td width=30>Ранг</td><td width=30>E1</td><td width=30>E2</td><td width=30>E3</td><td width=30>E4</td><td width=30>E5</td><td width=30>E6</td><td width=30>E7</td><td width=30>E8</td><td width=30>E9</td><td width=30>O1</td><td width=30>O2</td><td width=30>O3</td><td width=30>O4</td><td width=30>O5</td><td width=30>O6</td></tr>
-<tr height=30><td>Возраст</td><td>18</td><td>18</td><td>19</td><td>20</td><td>23</td><td>26</td><td>30</td><td>35</td><td>38</td><td>22</td><td>23</td><td>25</td><td>30</td><td>36</td><td>44</td>
+<tr height=30><td>Возраст флота</td><td>18</td><td>18</td><td>19</td><td>20</td><td>23</td><td>26</td><td>30</td><td>35</td><td>38</td><td>22</td><td>23</td><td>25</td><td>30</td><td>36</td><td>44</td>
+<tr height=30><td>Возраст ЭК</td><td>18</td><td>--</td><td>18</td><td>--</td><td>20</td><td>--</td><td>30</td><td>--</td><td>--</td><td>20</td><td>--</td><td>25</td><td>--</td><td>35</td><td>40</td>
+
 </table>
 <br>
 <strong><span style="color: #ff0000;">Конфликты между персонажами </span></strong><br>
