Чейнджлог и фикс нулевого приоритета.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,23 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">15 June 2018</h2>
+			<h3 class="author">Обновление от SolarK:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">В наборе первой помощи при ожогах появилась таблетка келотана.</li>
+				<li class="tweak">В наборе первой помощи при травмах появилась таблетка бикардина.</li>
+			</ul>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В автолат добавлен магазин для стечкина с резиновыми пулями.</li>
+				<li class="rscadd">Основной язык ПСС стал общедоступным.</li>
+				<li class="spellcheck">Обновлены правила - добавлена строчка с необходимым возрастом для ЭК.</li>
+				<li class="maptweak">Неизвестный инженер-игроман построил в технических помещениях комнату для приватных игр азартного характера</li>
+				<li class="bugfix">Стогранный кубик пофикшен - бросает на все 100.</li>
+				<li class="bugfix">Исправлен спрайт альтернативного противогаза.</li>
+				<li class="rscdel">Магазин от автоматического дробовика больше не появляется в аплинке у не-нюкеров.</li>
+			</ul>
+
 			<h2 class="date">13 June 2018</h2>
 			<h3 class="author">Обновление от Bear1ake:</h3>
 			<ul class="changes bgimages16">
