--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">16 June 2018</h2>
+			<h3 class="author">Обновление от SolarK:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Теперь вы можете причесать кого-нибудь щеткой для волос.</li>
+			</ul>
+
 			<h2 class="date">15 June 2018</h2>
 			<h3 class="author">Обновление от SolarK:</h3>
 			<ul class="changes bgimages16">
