В лодаут резоми добавлена рабочая форма общего характера в чёрном и белом варианте в 5 цветах - в списке имеет название (Resomi) work smock, light/gray. Также, добавлены солнцезащитные линзы (Resomi), sun lenses (ничем не отличаются от солнцезащитных очков кроме спрайта) и маленький шарф (Resomi), small mantle. Спрайты от Twinindifferent.

--- a/html/changelog_infinity.html
+++ b/html/changelog_infinity.html
@@ -56,6 +56,12 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">18 June 2018</h2>
+			<h3 class="author">Обновление от Terror4000rus:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">В лодаут резоми добавлена рабочая форма общего характера в чёрном и белом варианте в 5 цветах - в списке имеет название (Resomi) work smock, light/gray. Также, добавлены солнцезащитные линзы (Resomi), sun lenses (ничем не отличаются от солнцезащитных очков кроме спрайта) и маленький шарф (Resomi), small mantle. Спрайты от Twinindifferent.</li>
+			</ul>
+
 			<h2 class="date">16 June 2018</h2>
 			<h3 class="author">Обновление от SolarK:</h3>
 			<ul class="changes bgimages16">
